--- a/META.yml
+++ b/META.yml
@@ -5,19 +5,12 @@ author:
 build_requires:
   Capture::Tiny: 0.06
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3603'
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300002, CPAN::Meta::Converter version 2.112621'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Shell-Verbose
-provides:
-  Shell::Verbose:
-    file: lib/Shell/Verbose.pm
-    version: 0.1
-requires:
-  perl: v5.8.8
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.1
+version: 0.1.1
