--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Shell-Verbose
-version = 0.2
+version = 0.3
 author  = Drew Stephens <drew@dinomite.net>
 license = Perl_5
 copyright_holder = Drew Stephens
@@ -11,6 +11,7 @@ critic_workaround = true
 [@Filter]
 -bundle = @Basic
 -remove = Readme
+[ReadmeFromPod]
 
 [Prereqs / TestRequires]
 Capture::Tiny   = 0.06
